--- a/v2rayN/v2rayN/Forms/MainForm.zh-Hans.resx
+++ b/v2rayN/v2rayN/Forms/MainForm.zh-Hans.resx
@@ -245,7 +245,7 @@
     <value>300, 22</value>
   </data>
   <data name="menuRealPingServer.Text" xml:space="preserve">
-    <value>测试服务器真连接延迟(多选) (Ctrl+R)</value>
+    <value>测试服务器真连接延迟(多选) (R)</value>
   </data>
   <data name="menuSpeedServer.Size" type="System.Drawing.Size, System.Drawing">
     <value>300, 22</value>
